k8s-manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: webapp-service
  namespace: webapp-team
  labels:
    app: webapp
    tenant: webapp-team
    compliance: iso27001-soc2-gdpr
  annotations:
    cloud.google.com/neg: '{"ingress": true}'
spec:
  selector:
    app: webapp
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
    name: http
  type: ClusterIP
